# src/presentation/api/docs/swagger.json
@@ -66,7 +66,7 @@
                 "summary": "UpdateAccount",
                 "parameters": [
                     {
-                        "description": "UpdateAccount (Only accountId is required.)",
+                        "description": "Only 'accountId' is required. Human-readable fields ('cpuCores', 'memoryMebibytes' etc) will be converted to their technical counterpart ('millicores' etc) automatically.",
                         "name": "updateDto",
                         "in": "body",
                         "required": true,
@@ -103,7 +103,7 @@
                 "summary": "CreateAccount",
                 "parameters": [
                     {
-                        "description": "NewAccount",
+                        "description": "Human-readable fields ('cpuCores', 'memoryMebibytes' etc) will be converted to their technical counterpart ('millicores' etc) automatically.",
                         "name": "createDto",
                         "in": "body",
                         "required": true,
@@ -439,7 +439,7 @@
                 "summary": "UpdateContainerProfile",
                 "parameters": [
                     {
-                        "description": "UpdateContainerProfile (Only id is required.)",
+                        "description": "Only 'id' is required. Human-readable fields ('cpuCores', 'memoryMebibytes' etc) will be converted to their technical counterpart ('millicores' etc) automatically.",
                         "name": "updateContainerProfileDto",
                         "in": "body",
                         "required": true,
@@ -463,7 +463,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Add a new container profile.",
+                "description": "Create a new container profile.",
                 "consumes": [
                     "application/json"
                 ],
@@ -473,10 +473,10 @@
                 "tags": [
                     "container"
                 ],
-                "summary": "AddNewContainerProfile",
+                "summary": "CreateNewContainerProfile",
                 "parameters": [
                     {
-                        "description": "NewContainerProfile (Only name and baseSpecs are required.)",
+                        "description": "Only 'name' and 'baseSpecs' are required. Human-readable fields ('cpuCores', 'memoryMebibytes' etc) will be converted to their technical counterpart ('millicores' etc) automatically.",
                         "name": "createContainerProfileDto",
                         "in": "body",
                         "required": true,
@@ -1090,7 +1090,7 @@
                     "$ref": "#/definitions/valueObject.ContainerSpecs"
                 },
                 "hostMinCapacityPercent": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "maxSpecs": {
                     "$ref": "#/definitions/valueObject.ContainerSpecs"
@@ -1198,7 +1198,7 @@
                     "$ref": "#/definitions/valueObject.ContainerSpecs"
                 },
                 "hostMinCapacityPercent": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -1343,7 +1343,7 @@
                     "$ref": "#/definitions/valueObject.ContainerSpecs"
                 },
                 "hostMinCapacityPercent": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -1603,13 +1603,31 @@
                 "cpuCores": {
                     "type": "number"
                 },
-                "diskBytes": {
-                    "type": "integer"
-                },
-                "inodes": {
-                    "type": "integer"
-                },
                 "memoryBytes": {
+                    "type": "integer"
+                },
+                "memoryGibibytes": {
+                    "type": "integer"
+                },
+                "memoryMebibytes": {
+                    "type": "integer"
+                },
+                "millicores": {
+                    "type": "integer"
+                },
+                "storageBytes": {
+                    "type": "integer"
+                },
+                "storageGibibytes": {
+                    "type": "integer"
+                },
+                "storageInodes": {
+                    "type": "integer"
+                },
+                "storageMebibytes": {
+                    "type": "integer"
+                },
+                "storagePerformanceUnits": {
                     "type": "integer"
                 }
             }
@@ -1656,6 +1674,18 @@
                     "type": "number"
                 },
                 "memoryBytes": {
+                    "type": "integer"
+                },
+                "memoryGibibytes": {
+                    "type": "integer"
+                },
+                "memoryMebibytes": {
+                    "type": "integer"
+                },
+                "millicores": {
+                    "type": "integer"
+                },
+                "storagePerformanceUnits": {
                     "type": "integer"
                 }
             }
